<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">五人鹰眼</string>
    <string name="app_about_me">关于我们</string>
	<string name="img_desc">图片</string>
	<string name="app_running">正在运行&#8230;</string>
	
    <string name="message_dialog_caption">温馨提示</string>
    <string name="message_dialog_button_ok">确定</string>
    <string name="message_dialog_button_cancel">取消</string>
		
	<string name="app_exit_when_click_agin">再按一次退出系统</string>
	
	<string name="menu_item_history_message">历史消息</string>
	<string name="menu_item_change_password">修改密码</string>
	<string name="menu_item_check_new_version">检查更新</string>
	<string name="menu_item_about_me">关于我们</string>
	<string name="menu_item_switch_account">切换用户</string>
	<string name="menu_item_close_app">关闭系统</string>

	<string name="hint_for_exit">关闭系统可能会收不到报警通知，您确定要退出吗？</string>
	
	<string name="action_exit_button_caption">马上退出</string>
	<string name="action_exit_cancel_button_caption">暂不退出</string>

    <string name="title_activity_message">消息</string>
    <string name="title_activity_device">设备</string>
    <string name="title_activity_view_camera">查看摄像头</string>
		
	<string name="hint_processing">正在处理，请稍后&#8230;　</string>
	<string name="hint_receiving">正在接收中，请稍后&#8230;　</string>
	
	<string name="err_password_cant_null">密码不能为空！</string>
	<string name="err_two_password_diff">两次输入密码不一致！</string>
	<string name="err_change_password_hint">修改密码出错，请稍后再试！</string>
	<string name="hint_new_pass_ok">　　新密码设置成功，下次登录请记得使用刚刚设置的新密码！</string>
	
	<string name="title_activity_changepassword">修改密码</string>
	
    <string name="new_password_lab">请输入新的密码</string>
    <string name="new_password_lab2">请再次输入新的密码</string>
		
	<string name="hint_device_offline">该设备已掉线，不能操作</string>
	<string name="hint_message_read_error">设置已读出错，请稍后再试！</string>
	
	<string name="warn_new_message">您有新的报警信息，点击查看详细内容！</string>
	
    <string name="title_picture_process_waiting">正在查找图片，请稍候...　　</string>
    <string name="hint_not_found_picture">未找到指定图片，请稍后再试！</string>
    <string name="picture_receive_error">未能获得图片</string>
    
    <string name="message_receiving_hint">当前没有报警消息</string>
		
	<string name="device_receiving_hint">当前未接入任何设备</string>
	<string name="dev_nick_name">名称：</string>
	<string name="dev_current_state">状态：</string>
	<string name="dev_state_running">正在运行&#8230;</string>
	<string name="dev_state_closed">已停止</string>
	<string name="view_camera_lab">查看</string>
	
	<string name="action_camera_play">播放</string>
	<string name="action_camera_stop">停止</string>
	<string name="action_camera_next">下一张</string>
	<string name="action_camera_prev">上一张</string>
	
	<string name="hint_last_already">已到最后一张</string>
	<string name="hint_first_already">已经是第一张</string>
	
	<string name="err_camera_ip_setting">摄像头IP未设置，请设置后再进行查看！</string>
	<string name="err_camera_port_setting">摄像头Port未设置，请设置后再进行查看！</string>
	<string name="err_camera_is_offline">摄像头未在线，请检查线路等是否异常！</string>
	
    <string name="tag_sensor_view">传感器视图</string>
    <string name="tag_sensor_info">传感器地址</string>
    <string name="tag_message_server_id">消息服务器Id</string>
    <string name="tag_message_local_id">消息本地Id</string>
	
    <string name="no_internet">网络未连接，请检查网络设置！</string>
    <string name="loading_exp_hint">加载数据失败，请稍后重试！</string>
    <string name="message_to_end">已到底部，没有更多消息了！</string>
    
    <string name="abnor_title">异常消息</string>
    <string name="warn_title">报警信息</string>
    <string name="info_title">系统消息</string>
    
    <string name="warn_invade_message" formatted="false">%s（%s）发生警报，请尽快确认！</string>
    
    <string name="hint_message_isread">该消息已阅</string>
    
    <string name="sensor_property_setting">设备属性</string>
    
    <string name="device_name_lab">设备名称：</string>
    <string name="modify_lab">修改</string>
    <string name="bind_camera_lab">绑定摄像头：</string>
    <string name="no_camera_bind_lab">无</string>
    
    <string name="camera_addr_lab">摄像头地址：</string>
    <string name="camera_port_lab">摄像头端口：</string>
    
    <string name="please_select_camera">请选择摄像头</string>
    <string name="title_modify_camera_addr">修改摄像头地址</string>
    <string name="title_modify_camera_port">修改摄像头端口</string>
    <string name="title_thumbnails_caption">摄像头连拍浏览</string>
    
    <string name="hint_rename_sensor_name_failed">修改设备名称失败，请稍后再试！</string>
    <string name="hint_unbind_camera_succ">解除摄像头绑定成功！</string>
    <string name="hint_unbind_camera_failed">解除摄像头绑定失败，请稍后重试！</string>
    <string name="hint_bind_camera_failed">绑定摄像头失败，请稍后重试！</string>
    <string name="hint_bind_camera_succ">绑定摄像头成功！</string>
    <string name="hint_modify_camera_port_failed">修改摄像头端口失败，请稍后重试！</string>
    <string name="hint_modify_camera_addr_failed">修改摄像头地址失败，请稍后重试！</string>
    <string name="hint_modify_camera_addr_succ">修改摄像头地址成功！</string>
    <string name="err_modify_camera_addr">修改摄像头地址失败，请稍后重试！</string>
    <string name="hint_modify_camera_port_succ">修改摄像头端口成功！</string>
    <string name="err_modify_camera_port">修改摄像头端口失败，请稍后重试！</string>
    
    <string name="hint_login_failed">登录失败，用户名或密码错误！</string>
    <string name="hint_login_waiting">正在登录&#8230;　　</string>
    <string name="hint_user_name">请输入帐号名称！</string>
    <string name="hint_password">请输入登录密码！</string>
    <string name="user_hint_text">帐号名称</string>
    <string name="pass_hint_text">密码</string>
    <string name="login_button_caption">登　录</string>
	<string name="get_password_lab">忘记密码，点此找回</string>
	
	<string name="titble_getpass_caption">找回密码</string>
	
	<string name="getpass_user_name_lab">登录用户名</string>
	<string name="getpass_note_text">注意：\r\n\r\n　　找回密码功能会将新生成的密码以短信方式发送到用户绑定的手机上，请注意查收并以新的密码进行登录。\r\n\r\n　　登录成功后，请尽快修改密码！</string>
    <string name="hint_get_pass_ok">　　找回密码操作成功，稍后系统会将新密码以短信方式发送到您绑定的手机上；如果3分钟后尚未收到短信，请重新进行找回密码操作。</string>
    <string name="hint_i_unknown">知道了</string>
	<string name="err_get_pass">找回密码失败，请稍后再重新操作。</string>
	<string name="hint_get_password">正在找回密码(%d)&#8230;　　</string>
	<string name="please_input_user_name">请输入登录用户名！</string>
	
    <string name="err_get_camera_data">获取摄像头数据失败，请稍后再试！</string>
    
    <string name="rename_sensor_name">修改设备名称</string>	
    <string name="hint_rename_sensor_name_succ">修改设备名称成功！</string>
    
    <string name="hint_submit_waiting">正在保存中&#8230;　</string>
    
    <string name="please_input_new_sensor_name">请输入设备名称！</string>
    <string name="please_input_new_camera_addr">请输入新的摄像头的地址！</string>
    <string name="please_input_new_camera_port">请输入新的摄像头端口！</string>
    <string name="err_rename_sensor">重命名设备失败，请稍后重试！</string>
    
    <string name="hint_unbind_camera">您确定要解除对摄像头(%s)的绑定吗？</string>
    
    <string name="info_close_device" formatted="false">%s（%s）被关闭，停止监测。</string>
    <string name="info_open_device" formatted="false">%s（%s）启动成功，进入监测状态。</string>
    
	<string name="about_version_label">版本号 </string>
    <string name="about_email_label">客服邮箱　</string>
    <string name="about_email_value">wuren_support@163.net</string>
    <string name="about_phone_label">客服电话　</string>
    <string name="about_phone_value">010&#8211;53398107</string>
    <string name="about_www_label">官方网站　</string>
    <string name="about_www_value">http://www.5ren.net</string>
    <string name="about_company_label">技术支持　</string>
    <string name="about_company_value">北京五人科技有限公司</string>
			
    <string name="pull_down_refresh_action_hint">下拉刷新</string>
    <string name="pull_down_refresh_action_hint2">松开刷新数据</string>
    <string name="pull_down_refresh_refreshtime_hint">上次刷新时间：%s</string>
    <string name="pull_down_refresh_refreshing_hint">正在刷新，请稍候&#8230;</string>
    <string name="pull_down_refresh_more_hint">正在加载，请稍候&#8230;</string>
    
</resources>
