<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
	    <ImageView
	        android:layout_width="100dp"
	        android:layout_height="100dp"
	        android:layout_marginTop="35dp"
	        android:contentDescription="@string/img_desc"
	        android:src="@drawable/ic_launcher"
	        android:layout_gravity="center_horizontal" >
	        
	    </ImageView>
	    
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="8dp"
	        android:gravity="center_horizontal"
	        android:text="@string/app_name"
	        android:textColor="#666666"
	        android:textStyle="bold"
	        android:textSize="24sp" >
	        
	    </TextView>

	    <TextView android:id="@+id/about_version_text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:gravity="center_horizontal"
	        android:textColor="#888888"
	        android:textSize="15sp" >
	        
	    </TextView>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="150dp"
	        android:layout_marginTop="40dp"
	        android:orientation="vertical"
	        android:gravity="center_horizontal" >
	        
		    <LinearLayout
		        android:layout_width="250dp"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal" >
	
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="5dp"
			        android:gravity="center_horizontal"
			        android:text="@string/about_email_label"
			        android:textColor="#555555"
			        android:textSize="15sp" >
			        
			    </TextView>
	
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="5dp"
			        android:gravity="center_horizontal"
			        android:text="@string/about_email_value"
			        android:textColor="#779988"
			        android:textSize="15sp" >
			        
			    </TextView>
			    
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="250dp"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp"
		        android:orientation="horizontal" >
	
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="5dp"
			        android:gravity="center_horizontal"
			        android:text="@string/about_phone_label"
			        android:textColor="#555555"
			        android:textSize="15sp" >
			        
			    </TextView>
	
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="5dp"
			        android:gravity="center_horizontal"
			        android:text="@string/about_phone_value"
			        android:textColor="#779988"
			        android:textSize="15sp" >
			        
			    </TextView>
			    
		    </LinearLayout>	    
	
		    <LinearLayout
		        android:layout_width="250dp"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp"
		        android:orientation="horizontal" >
	
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="5dp"
			        android:gravity="center_horizontal"
			        android:text="@string/about_www_label"
			        android:textColor="#555555"
			        android:textSize="15sp" >
			        
			    </TextView>
	
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="5dp"
			        android:gravity="center_horizontal"
			        android:text="@string/about_www_value"
			        android:textSize="15sp"
			        android:autoLink="web" >
			        
			    </TextView>
			    
		    </LinearLayout>
		    
		    
		     <LinearLayout
		        android:layout_width="250dp"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp"
		        android:orientation="horizontal" >
	
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="5dp"
			        android:gravity="center_horizontal"
			        android:text="@string/about_company_label"
			        android:textColor="#555555"
			        android:textSize="15sp" >
			        
			    </TextView>
	
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="5dp"
			        android:gravity="center_horizontal"
			         android:textColor="#779988"
			        android:text="@string/about_company_value"
			        android:textSize="15sp"
			        android:autoLink="web" >
			        
			    </TextView>
			    
		    </LinearLayout>
		    
		</LinearLayout>
	    
    </LinearLayout>

</LinearLayout>
