<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="#E1E1E1"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
	    <ImageView
	        android:layout_marginTop="30dp"
	        android:layout_marginBottom="20dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top|center_horizontal"
	        android:contentDescription="@string/img_desc"
	        android:src="@drawable/ic_launcher" />
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
		    android:background="@drawable/yingyan_shape_login_panel"
		    android:orientation="vertical" >
	
		    <EditText
		        android:id="@+id/edit_login_user"
		        android:layout_width="match_parent"
		        android:layout_height="50dp"
		        android:padding="8dp"
		        android:background="@drawable/yingyan_shape_login_username"
		        android:singleLine="true"
		        android:hint="@string/user_hint_text" />
		
		    <View
		        android:layout_width="match_parent"
		        android:layout_height="1px"
		        android:background="#CDCDCD" />
		    
		    <EditText
		        android:id="@+id/edit_login_pass"
		        android:layout_width="match_parent"
		        android:layout_height="50dp"
		        android:padding="8dp"
		        android:background="@drawable/yingyan_shape_login_password"
		        android:singleLine="true"
		        android:inputType="textPassword"
		        android:hint="@string/pass_hint_text" />
	        
	    </LinearLayout>
	    
	    <Button
	        android:id="@+id/login_button"
	        android:layout_marginTop="10dp"
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:focusable="true"
	        android:background="@drawable/yingyan_selector_login_button"
	        android:textColor="@android:color/white"
	        android:textSize="16sp"
	        android:text="@string/login_button_caption" />
    
    </LinearLayout>
    
    <TextView
        android:id="@+id/action_get_password"
        android:layout_marginBottom="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:textSize="15sp"
        android:textColor="@drawable/yingyan_selector_getpass_textcolor"
        android:text="@string/get_password_lab" />
    
</RelativeLayout>
