<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="13dp"
    android:orientation="vertical"
    tools:context=".RenameDeviceActivity" >

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#888888"
        android:textSize="16sp"
        android:text="@string/getpass_user_name_lab" />
    
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/login_user_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:singleLine="true"
            android:maxLength="50"
            android:background="@android:color/white"
            android:padding="3dp" />
        
        <LinearLayout
            android:id="@+id/clear_edit_text"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:gravity="center" >

	        <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="@string/img_desc"
	            android:src="@drawable/yingyan_icon_clear" />
            
        </LinearLayout>
        
    </RelativeLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#555555" />
    
    <TextView
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/getpass_note_text" />
    
</LinearLayout>
