<?xml version="1.0" encoding="utf-8"?>
 
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dip"
    android:layout_margin="60dp" >

	<LinearLayout
	    android:layout_width="220dp"
	    android:layout_height="60dp"
	    android:orientation="horizontal"
	    android:baselineAligned="false"
	    android:layout_centerInParent="true" >

	    <RelativeLayout
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="3" >

    			<ImageView android:id="@+id/current_action_arrow"
    			    android:layout_width="wrap_content"
    			    android:layout_height="15dp"
    			    android:layout_centerInParent="true"
        			android:contentDescription="@string/img_desc"
        			android:src="@drawable/puerlink_widget_pull_down_refresh_arrow" />

        		<ProgressBar android:id="@+id/refresh_loading_pic"
        		    android:layout_width="30dp"
        		    android:layout_height="30dp"
        		    android:layout_centerInParent="true"
        		    android:visibility="invisible" />
        		
		</RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="17"
            android:orientation="vertical" >

        	<TextView android:id="@+id/current_action_hint"
        	    android:layout_width="match_parent"
        	    android:layout_height="0dp"
        	    android:layout_weight="1"
        	    android:textSize="14sp"
        	    android:textColor="#2C3E50"
        	    android:gravity="center_horizontal|bottom"
        	    android:text="@string/pull_down_refresh_action_hint" />

        	<TextView android:id="@+id/last_refresh_time"
        	    android:layout_width="match_parent"
        	    android:layout_height="0dp"
        	    android:layout_weight="1"
        	    android:textSize="12sp"
        	    android:textColor="#2C3E50"
        	    android:gravity="center_horizontal|top"
        	    android:text="@string/pull_down_refresh_refreshtime_hint" />

        </LinearLayout>

    </LinearLayout>
 
</RelativeLayout>