<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_title_bar_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PictureBrowserActivity" >

    <LinearLayout
        android:id="@+id/image_attachment_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingRight="0dip" >

        <ImageView
            android:id="@+id/image_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter" />
        
    </LinearLayout>

    <RelativeLayout
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true" >
        
        <Button
            android:id="@+id/play_button"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@drawable/yingyan_selector_login_button"
            android:textColor="#E8E8E8"
            android:text="@string/action_camera_play" />
        <Button 
            android:id="@+id/prev_button"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@drawable/yingyan_selector_login_button"
            android:textColor="#E8E8E8"
            android:visibility="gone"
            android:text="@string/action_camera_prev"/>
        
        <Button
            android:id="@+id/next_button"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/yingyan_selector_login_button"
            android:textColor="#E8E8E8"
            android:text="@string/action_camera_next" />
        
    </RelativeLayout>
    
</RelativeLayout>